Regression: Snapping is broken with proportional editing #96812

Closed
opened 2022-03-27 11:47:31 +02:00 by francesco · 10 comments

Blender Version
Broken: (example: 3.2.0 Alpha,08d2428632ed, master, 2022-03-26, as found on the splash screen)
Introduced in 4b35d6950d

Short description of error
Snapping is currently broken with proportional editing
Also, The checkbox "Project Individual Elements" functionality is inverted.
It is enabled by default and when I check it to activate it the functionality is disabled.

Exact steps for others to reproduce the error
I'm following this tutorial https://youtu.be/R1isb0x4zYw?t=266 to adapt a surface of an object over another one.
Activating the checkbox I got surfaces intersecting, deactivating it the projections work correctly.

  • Open .blend file
  • Move selected vertex (snapping is broken)
    Donut (4).blend
**Blender Version** Broken: (example: 3.2.0 Alpha,`08d2428632ed`, master, 2022-03-26, as found on the splash screen) Introduced in 4b35d6950d **Short description of error** Snapping is currently broken with proportional editing Also, The checkbox "Project Individual Elements" functionality is inverted. It is enabled by default and when I check it to activate it the functionality is disabled. **Exact steps for others to reproduce the error** I'm following this tutorial https://youtu.be/R1isb0x4zYw?t=266 to adapt a surface of an object over another one. Activating the checkbox I got surfaces intersecting, deactivating it the projections work correctly. - Open .blend file - Move selected vertex (snapping is broken) [Donut (4).blend](https://archive.blender.org/developer/F12952036/Donut__4_.blend)
Author

Added subscriber: @franz_65

Added subscriber: @franz_65

Added subscribers: @mano-wii, @Ethan-Hall

Added subscribers: @mano-wii, @Ethan-Hall

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm that proportional editing breaks snapping.

Bisect points to: 4b35d6950d

Let me poke @mano-wii

I can confirm that proportional editing breaks snapping. Bisect points to: 4b35d6950d4f Let me poke @mano-wii
Ethan-Hall self-assigned this 2022-03-28 03:10:55 +02:00

I made a small patch for this: D14472

I made a small patch for this: [D14472](https://archive.blender.org/developer/D14472)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Thanks for the report. I can confirm that the snapping is broken but I'm not convinced yet about inversion of "Project Individual Elements" operation.
At least I can not reproduce on this test file:
Donut (4).blend
Please always follow submission template when submitting a bug report: https://wiki.blender.org/wiki/Process/Bug_Reports
@Ethan-Hall , thank you for bisecting :)
Feel free to tag module when confirming the bug.

Thanks for the report. I can confirm that the snapping is broken but I'm not convinced yet about inversion of "Project Individual Elements" operation. At least I can not reproduce on this test file: [Donut (4).blend](https://archive.blender.org/developer/F12952036/Donut__4_.blend) Please always follow submission template when submitting a bug report: https://wiki.blender.org/wiki/Process/Bug_Reports @Ethan-Hall , thank you for bisecting :) Feel free to tag module when confirming the bug.
Pratik Borhade changed title from Project Individual Elements to Regression: Snapping is broken with proportional editing 2022-03-28 09:04:30 +02:00

This issue was referenced by c33870ab14

This issue was referenced by c33870ab14c305d3bb4e2bac6d664f6e83a94653

This issue was referenced by 2e99295d5e

This issue was referenced by 2e99295d5e17b798e0890853b26086e0f33cc407

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96812
No description provided.