Fix T96812: Regression: Snapping is broken with proportional editing

This was a mistake in the conditional structure introduced in 4b35d6950d4f

This commit also adds a new type of snap exclusion: `SNAP_NOT_EDITED`.

Thanks to @Ethan1080 for pointing out the error.