source/blender/editors/include/ED_transform_snap_object_context.h
@@ -29,8 +29,9 @@ typedef enum {
   SNAP_ALL = 0,
   SNAP_NOT_SELECTED = 1,
   SNAP_NOT_ACTIVE = 2,
-  SNAP_ONLY_ACTIVE = 3,
-  SNAP_SELECTABLE = 4,
+  SNAP_NOT_EDITED = 3,
+  SNAP_ONLY_ACTIVE = 4,
+  SNAP_SELECTABLE = 5,
 } eSnapSelect;
 
 typedef enum {
